Fixed vertical alignment of small clocks and  of the favorite button in the course cards.

--- a/app/assets/stylesheets/components/favorite.css.less
+++ b/app/assets/stylesheets/components/favorite.css.less
@@ -1,6 +1,6 @@
 .favorite-button::before {
   color: @text-secondary;
-  margin-top: 5px;
+  margin-top: 4px;
   margin-left: 6px;
   cursor: pointer;
 }
