--- a/app/assets/stylesheets/models/series.css.less
+++ b/app/assets/stylesheets/models/series.css.less
@@ -171,7 +171,7 @@
   overflow: visible;
 }
 
-.mdi-alarm.mdi-12 {
+.mdi-alarm.mdi-12::before {
   top: 2px;
 }
 
